Fixed field label alignment. Added some app error handling, logging, display. Started moving away from jquery in favor of "vanilla" js.

--- a/esp8266-fastled-webserver/data/css/styles.css
+++ b/esp8266-fastled-webserver/data/css/styles.css
@@ -2,10 +2,6 @@ body {
   padding-bottom: 80px;
 }
 
-.col-form-label {
-  text-align: right;
-}
-
 .infoDtTemplate {
   text-align: right;
 }
